@@ -6658,49 +6658,48 @@ static const struct LevelUpMove sHeracrossLevelUpLearnset[] = {
 static const struct LevelUpMove sSneaselLevelUpLearnset[] = {
     LEVEL_UP_MOVE( 1, MOVE_SCRATCH),
     LEVEL_UP_MOVE( 1, MOVE_LEER),
-    LEVEL_UP_MOVE( 1, MOVE_TAUNT),
-    LEVEL_UP_MOVE( 8, MOVE_QUICK_ATTACK),
+    LEVEL_UP_MOVE( 6, MOVE_TAUNT),
     LEVEL_UP_MOVE(10, MOVE_FEINT_ATTACK),
-    LEVEL_UP_MOVE(14, MOVE_ICY_WIND),
-    LEVEL_UP_MOVE(16, MOVE_FURY_SWIPES),
-    LEVEL_UP_MOVE(20, MOVE_AGILITY),
-    LEVEL_UP_MOVE(22, MOVE_METAL_CLAW),
-    LEVEL_UP_MOVE(25, MOVE_HONE_CLAWS),
-    LEVEL_UP_MOVE(28, MOVE_BEAT_UP),
-    LEVEL_UP_MOVE(32, MOVE_SCREECH),
-    LEVEL_UP_MOVE(35, MOVE_SLASH),
+    LEVEL_UP_MOVE(12, MOVE_QUICK_ATTACK),
+    LEVEL_UP_MOVE(18, MOVE_METAL_CLAW),
+    LEVEL_UP_MOVE(24, MOVE_ICY_WIND),
+    LEVEL_UP_MOVE(30, MOVE_FURY_SWIPES),
+    LEVEL_UP_MOVE(36, MOVE_HONE_CLAWS),
     LEVEL_UP_MOVE(40, MOVE_SNATCH),
+    LEVEL_UP_MOVE(42, MOVE_BEAT_UP),
     LEVEL_UP_MOVE(44, MOVE_PUNISHMENT),
-    LEVEL_UP_MOVE(47, MOVE_ICE_SHARD),
+    LEVEL_UP_MOVE(48, MOVE_AGILITY),
+    LEVEL_UP_MOVE(54, MOVE_SCREECH),
+    LEVEL_UP_MOVE(60, MOVE_SLASH),
     LEVEL_UP_END
 };
 
 #if P_GEN_4_CROSS_EVOS
 static const struct LevelUpMove sWeavileLevelUpLearnset[] = {
-    LEVEL_UP_MOVE( 1, MOVE_AGILITY),
-    LEVEL_UP_MOVE( 1, MOVE_BEAT_UP),
-    LEVEL_UP_MOVE( 1, MOVE_ICE_SHARD),
-    LEVEL_UP_MOVE( 1, MOVE_SLASH),
+    LEVEL_UP_MOVE( 1, MOVE_FEINT_ATTACK),
     LEVEL_UP_MOVE( 1, MOVE_EMBARGO),
     LEVEL_UP_MOVE( 1, MOVE_REVENGE),
     LEVEL_UP_MOVE( 1, MOVE_ASSURANCE),
+    LEVEL_UP_MOVE( 1, MOVE_QUICK_ATTACK),
+    LEVEL_UP_MOVE( 1, MOVE_BEAT_UP),
+    LEVEL_UP_MOVE( 1, MOVE_AGILITY),
+    LEVEL_UP_MOVE( 1, MOVE_SLASH),
     LEVEL_UP_MOVE( 1, MOVE_SCRATCH),
     LEVEL_UP_MOVE( 1, MOVE_LEER),
     LEVEL_UP_MOVE( 1, MOVE_TAUNT),
-    LEVEL_UP_MOVE( 1, MOVE_QUICK_ATTACK),
-    LEVEL_UP_MOVE( 8, MOVE_QUICK_ATTACK),
-    LEVEL_UP_MOVE(10, MOVE_FEINT_ATTACK),
-    LEVEL_UP_MOVE(14, MOVE_ICY_WIND),
-    LEVEL_UP_MOVE(16, MOVE_FURY_SWIPES),
-    LEVEL_UP_MOVE(20, MOVE_NASTY_PLOT),
-    LEVEL_UP_MOVE(22, MOVE_METAL_CLAW),
-    LEVEL_UP_MOVE(25, MOVE_HONE_CLAWS),
-    LEVEL_UP_MOVE(28, MOVE_FLING),
-    LEVEL_UP_MOVE(32, MOVE_SCREECH),
-    LEVEL_UP_MOVE(35, MOVE_NIGHT_SLASH),
+    LEVEL_UP_MOVE( 1, MOVE_ICE_SHARD),
+    LEVEL_UP_MOVE(18, MOVE_METAL_CLAW),
+    LEVEL_UP_MOVE(24, MOVE_ICY_WIND),
+    LEVEL_UP_MOVE(30, MOVE_FURY_SWIPES),
+    LEVEL_UP_MOVE(36, MOVE_HONE_CLAWS),
     LEVEL_UP_MOVE(40, MOVE_SNATCH),
+    LEVEL_UP_MOVE(42, MOVE_FLING),
     LEVEL_UP_MOVE(44, MOVE_PUNISHMENT),
-    LEVEL_UP_MOVE(47, MOVE_DARK_PULSE),
+    LEVEL_UP_MOVE(47, MOVE_ICE_SHARD),
+    LEVEL_UP_MOVE(48, MOVE_NASTY_PLOT),
+    LEVEL_UP_MOVE(54, MOVE_SCREECH),
+    LEVEL_UP_MOVE(60, MOVE_NIGHT_SLASH),
+    LEVEL_UP_MOVE(66, MOVE_DARK_PULSE),
     LEVEL_UP_END
 };
 #endif //P_GEN_4_CROSS_EVOS
@@ -6858,79 +6857,73 @@ static const struct LevelUpMove sMagcargoLevelUpLearnset[] = {
 
 #if P_FAMILY_SWINUB
 static const struct LevelUpMove sSwinubLevelUpLearnset[] = {
-    LEVEL_UP_MOVE( 1, MOVE_TACKLE),
     LEVEL_UP_MOVE( 1, MOVE_ODOR_SLEUTH),
+    LEVEL_UP_MOVE( 1, MOVE_TACKLE),
+    LEVEL_UP_MOVE( 1, MOVE_MUD_SLAP),
     LEVEL_UP_MOVE( 5, MOVE_MUD_SPORT),
-    LEVEL_UP_MOVE( 8, MOVE_POWDER_SNOW),
-    LEVEL_UP_MOVE(11, MOVE_MUD_SLAP),
-    LEVEL_UP_MOVE(14, MOVE_ENDURE),
+    LEVEL_UP_MOVE( 5, MOVE_POWDER_SNOW),
+    LEVEL_UP_MOVE(10, MOVE_FLAIL),
+    LEVEL_UP_MOVE(15, MOVE_ICE_SHARD),
     LEVEL_UP_MOVE(18, MOVE_MUD_BOMB),
-    LEVEL_UP_MOVE(21, MOVE_ICY_WIND),
-    LEVEL_UP_MOVE(24, MOVE_ICE_SHARD),
-    LEVEL_UP_MOVE(28, MOVE_TAKE_DOWN),
-    LEVEL_UP_MOVE(35, MOVE_MIST),
-    LEVEL_UP_MOVE(37, MOVE_EARTHQUAKE),
-    LEVEL_UP_MOVE(40, MOVE_FLAIL),
-    LEVEL_UP_MOVE(44, MOVE_BLIZZARD),
-    LEVEL_UP_MOVE(48, MOVE_AMNESIA),
+    LEVEL_UP_MOVE(20, MOVE_MIST),
+    LEVEL_UP_MOVE(25, MOVE_ENDURE),
+    LEVEL_UP_MOVE(30, MOVE_ICY_WIND),
+    LEVEL_UP_MOVE(35, MOVE_AMNESIA),
+    LEVEL_UP_MOVE(40, MOVE_TAKE_DOWN),
+    LEVEL_UP_MOVE(45, MOVE_EARTHQUAKE),
+    LEVEL_UP_MOVE(50, MOVE_BLIZZARD),
     LEVEL_UP_END
 };
 
 static const struct LevelUpMove sPiloswineLevelUpLearnset[] = {
-    LEVEL_UP_MOVE( 0, MOVE_FURY_ATTACK),
-    LEVEL_UP_MOVE( 1, MOVE_FLAIL),
-    LEVEL_UP_MOVE( 1, MOVE_ICE_SHARD),
-    LEVEL_UP_MOVE( 1, MOVE_TACKLE),
-    LEVEL_UP_MOVE( 1, MOVE_FURY_ATTACK),
-    LEVEL_UP_MOVE( 1, MOVE_ANCIENT_POWER),
-    LEVEL_UP_MOVE( 1, MOVE_PECK),
+    LEVEL_UP_MOVE( 0, MOVE_ICE_FANG),
     LEVEL_UP_MOVE( 1, MOVE_ODOR_SLEUTH),
     LEVEL_UP_MOVE( 1, MOVE_MUD_SPORT),
+    LEVEL_UP_MOVE( 1, MOVE_FURY_ATTACK),
+    LEVEL_UP_MOVE( 1, MOVE_PECK),
+    LEVEL_UP_MOVE( 1, MOVE_ANCIENT_POWER),
+    LEVEL_UP_MOVE( 1, MOVE_TACKLE),
+    LEVEL_UP_MOVE( 1, MOVE_MUD_SLAP),
     LEVEL_UP_MOVE( 1, MOVE_POWDER_SNOW),
-    LEVEL_UP_MOVE( 5, MOVE_MUD_SPORT),
-    LEVEL_UP_MOVE( 8, MOVE_POWDER_SNOW),
-    LEVEL_UP_MOVE(11, MOVE_MUD_SLAP),
-    LEVEL_UP_MOVE(14, MOVE_ENDURE),
+    LEVEL_UP_MOVE( 1, MOVE_FLAIL),
+    LEVEL_UP_MOVE(15, MOVE_ICE_SHARD),
     LEVEL_UP_MOVE(18, MOVE_MUD_BOMB),
-    LEVEL_UP_MOVE(21, MOVE_ICY_WIND),
-    LEVEL_UP_MOVE(24, MOVE_ICE_FANG),
-    LEVEL_UP_MOVE(28, MOVE_TAKE_DOWN),
-    LEVEL_UP_MOVE(37, MOVE_MIST),
-    LEVEL_UP_MOVE(41, MOVE_THRASH),
-    LEVEL_UP_MOVE(46, MOVE_EARTHQUAKE),
-    LEVEL_UP_MOVE(52, MOVE_BLIZZARD),
-    LEVEL_UP_MOVE(58, MOVE_AMNESIA),
+    LEVEL_UP_MOVE(20, MOVE_MIST),
+    LEVEL_UP_MOVE(25, MOVE_ENDURE),
+    LEVEL_UP_MOVE(30, MOVE_ICY_WIND),
+    LEVEL_UP_MOVE(37, MOVE_AMNESIA),
+    LEVEL_UP_MOVE(44, MOVE_TAKE_DOWN),
+    LEVEL_UP_MOVE(51, MOVE_EARTHQUAKE),
+    LEVEL_UP_MOVE(58, MOVE_BLIZZARD),
+    LEVEL_UP_MOVE(65, MOVE_THRASH),
     LEVEL_UP_END
 };
 
 #if P_GEN_4_CROSS_EVOS
 static const struct LevelUpMove sMamoswineLevelUpLearnset[] = {
-    LEVEL_UP_MOVE( 1, MOVE_AMNESIA),
-    LEVEL_UP_MOVE( 1, MOVE_FLAIL),
-    LEVEL_UP_MOVE( 1, MOVE_ICE_SHARD),
-    LEVEL_UP_MOVE( 1, MOVE_ICY_WIND),
-    LEVEL_UP_MOVE( 1, MOVE_TACKLE),
-    LEVEL_UP_MOVE( 1, MOVE_FURY_ATTACK),
-    LEVEL_UP_MOVE( 1, MOVE_SCARY_FACE),
-    LEVEL_UP_MOVE( 1, MOVE_ANCIENT_POWER),
-    LEVEL_UP_MOVE( 1, MOVE_PECK),
+    LEVEL_UP_MOVE( 0, MOVE_DOUBLE_HIT),
     LEVEL_UP_MOVE( 1, MOVE_ODOR_SLEUTH),
     LEVEL_UP_MOVE( 1, MOVE_MUD_SPORT),
+    LEVEL_UP_MOVE( 1, MOVE_FURY_ATTACK),
+    LEVEL_UP_MOVE( 1, MOVE_PECK),
+    LEVEL_UP_MOVE( 1, MOVE_SCARY_FACE),
+    LEVEL_UP_MOVE( 1, MOVE_ICE_FANG),
+    LEVEL_UP_MOVE( 1, MOVE_ANCIENT_POWER),
+    LEVEL_UP_MOVE( 1, MOVE_TACKLE),
+    LEVEL_UP_MOVE( 1, MOVE_MUD_SLAP),
     LEVEL_UP_MOVE( 1, MOVE_POWDER_SNOW),
-    LEVEL_UP_MOVE( 5, MOVE_MUD_SPORT),
-    LEVEL_UP_MOVE( 8, MOVE_POWDER_SNOW),
-    LEVEL_UP_MOVE(11, MOVE_MUD_SLAP),
-    LEVEL_UP_MOVE(14, MOVE_ENDURE),
+    LEVEL_UP_MOVE( 1, MOVE_FLAIL),
+    LEVEL_UP_MOVE( 1, MOVE_ICICLE_CRASH),
+    LEVEL_UP_MOVE(15, MOVE_ICE_SHARD),
     LEVEL_UP_MOVE(18, MOVE_MUD_BOMB),
-    LEVEL_UP_MOVE(21, MOVE_HAIL),
-    LEVEL_UP_MOVE(24, MOVE_ICE_FANG),
-    LEVEL_UP_MOVE(28, MOVE_TAKE_DOWN),
-    LEVEL_UP_MOVE(33, MOVE_DOUBLE_HIT),
-    LEVEL_UP_MOVE(37, MOVE_MIST),
-    LEVEL_UP_MOVE(41, MOVE_THRASH),
-    LEVEL_UP_MOVE(46, MOVE_EARTHQUAKE),
-    LEVEL_UP_MOVE(52, MOVE_BLIZZARD),
-    LEVEL_UP_MOVE(58, MOVE_SCARY_FACE),
+    LEVEL_UP_MOVE(20, MOVE_MIST),
+    LEVEL_UP_MOVE(25, MOVE_ENDURE),
+    LEVEL_UP_MOVE(30, MOVE_ICY_WIND),
+    LEVEL_UP_MOVE(37, MOVE_AMNESIA),
+    LEVEL_UP_MOVE(44, MOVE_TAKE_DOWN),
+    LEVEL_UP_MOVE(51, MOVE_EARTHQUAKE),
+    LEVEL_UP_MOVE(58, MOVE_BLIZZARD),
+    LEVEL_UP_MOVE(65, MOVE_THRASH),
     LEVEL_UP_END
 };
 #endif //P_GEN_4_CROSS_EVOS
@@ -15354,52 +15347,50 @@ static const struct LevelUpMove sHaxorusLevelUpLearnset[] = {
 
 #if P_FAMILY_CUBCHOO
 static const struct LevelUpMove sCubchooLevelUpLearnset[] = {
+    LEVEL_UP_MOVE( 1, MOVE_POWDER_SNOW),
     LEVEL_UP_MOVE( 1, MOVE_GROWL),
-    LEVEL_UP_MOVE( 5, MOVE_POWDER_SNOW),
+    LEVEL_UP_MOVE( 3, MOVE_ENDURE),
+    LEVEL_UP_MOVE( 6, MOVE_FURY_SWIPES),
     LEVEL_UP_MOVE( 9, MOVE_BIDE),
-    LEVEL_UP_MOVE(13, MOVE_ICY_WIND),
-    LEVEL_UP_MOVE(15, MOVE_PLAY_NICE),
-    LEVEL_UP_MOVE(17, MOVE_FURY_SWIPES),
-    LEVEL_UP_MOVE(21, MOVE_BRINE),
-    LEVEL_UP_MOVE(25, MOVE_ENDURE),
-    LEVEL_UP_MOVE(29, MOVE_CHARM),
-    LEVEL_UP_MOVE(33, MOVE_SLASH),
-    LEVEL_UP_MOVE(36, MOVE_FLAIL),
-    LEVEL_UP_MOVE(41, MOVE_REST),
-    LEVEL_UP_MOVE(45, MOVE_BLIZZARD),
-    LEVEL_UP_MOVE(49, MOVE_HAIL),
-    LEVEL_UP_MOVE(53, MOVE_THRASH),
-    LEVEL_UP_MOVE(57, MOVE_SHEER_COLD),
+    LEVEL_UP_MOVE( 9, MOVE_ICY_WIND),
+    LEVEL_UP_MOVE(12, MOVE_PLAY_NICE),
+    LEVEL_UP_MOVE(15, MOVE_BRINE),
+    LEVEL_UP_MOVE(18, MOVE_FROST_BREATH),
+    LEVEL_UP_MOVE(21, MOVE_SLASH),
+    LEVEL_UP_MOVE(24, MOVE_FLAIL),
+    LEVEL_UP_MOVE(27, MOVE_CHARM),
+    LEVEL_UP_MOVE(30, MOVE_HAIL),
+    LEVEL_UP_MOVE(30, MOVE_SNOWSCAPE),
+    LEVEL_UP_MOVE(33, MOVE_THRASH),
+    LEVEL_UP_MOVE(36, MOVE_REST),
+    LEVEL_UP_MOVE(39, MOVE_BLIZZARD),
+    LEVEL_UP_MOVE(42, MOVE_SHEER_COLD),
     LEVEL_UP_END
 };
 
 static const struct LevelUpMove sBearticLevelUpLearnset[] = {
     LEVEL_UP_MOVE( 0, MOVE_ICICLE_CRASH),
-    LEVEL_UP_MOVE( 1, MOVE_CHARM),
-    LEVEL_UP_MOVE( 1, MOVE_ICICLE_CRASH),
-    LEVEL_UP_MOVE( 1, MOVE_SHEER_COLD),
-    LEVEL_UP_MOVE( 1, MOVE_THRASH),
-    LEVEL_UP_MOVE( 1, MOVE_SUPERPOWER),
     LEVEL_UP_MOVE( 1, MOVE_AQUA_JET),
-    LEVEL_UP_MOVE( 1, MOVE_GROWL),
+    LEVEL_UP_MOVE( 1, MOVE_CHARM),
     LEVEL_UP_MOVE( 1, MOVE_POWDER_SNOW),
-    LEVEL_UP_MOVE( 1, MOVE_BIDE),
-    LEVEL_UP_MOVE( 1, MOVE_ICY_WIND),
-    LEVEL_UP_MOVE( 5, MOVE_POWDER_SNOW),
+    LEVEL_UP_MOVE( 1, MOVE_GROWL),
+    LEVEL_UP_MOVE( 1, MOVE_ENDURE),
+    LEVEL_UP_MOVE( 1, MOVE_FURY_SWIPES),
     LEVEL_UP_MOVE( 9, MOVE_BIDE),
-    LEVEL_UP_MOVE(13, MOVE_ICY_WIND),
-    LEVEL_UP_MOVE(15, MOVE_PLAY_NICE),
-    LEVEL_UP_MOVE(17, MOVE_FURY_SWIPES),
-    LEVEL_UP_MOVE(21, MOVE_BRINE),
-    LEVEL_UP_MOVE(25, MOVE_ENDURE),
-    LEVEL_UP_MOVE(29, MOVE_SWAGGER),
-    LEVEL_UP_MOVE(33, MOVE_SLASH),
-    LEVEL_UP_MOVE(36, MOVE_FLAIL),
-    LEVEL_UP_MOVE(41, MOVE_REST),
-    LEVEL_UP_MOVE(45, MOVE_BLIZZARD),
-    LEVEL_UP_MOVE(53, MOVE_HAIL),
-    LEVEL_UP_MOVE(59, MOVE_THRASH),
-    LEVEL_UP_MOVE(66, MOVE_SHEER_COLD),
+    LEVEL_UP_MOVE( 9, MOVE_ICY_WIND),
+    LEVEL_UP_MOVE(12, MOVE_PLAY_NICE),
+    LEVEL_UP_MOVE(15, MOVE_BRINE),
+    LEVEL_UP_MOVE(18, MOVE_FROST_BREATH),
+    LEVEL_UP_MOVE(21, MOVE_SLASH),
+    LEVEL_UP_MOVE(24, MOVE_FLAIL),
+    LEVEL_UP_MOVE(27, MOVE_SWAGGER),
+    LEVEL_UP_MOVE(30, MOVE_HAIL),
+    LEVEL_UP_MOVE(30, MOVE_SNOWSCAPE),
+    LEVEL_UP_MOVE(33, MOVE_THRASH),
+    LEVEL_UP_MOVE(36, MOVE_REST),
+    LEVEL_UP_MOVE(41, MOVE_BLIZZARD),
+    LEVEL_UP_MOVE(46, MOVE_SHEER_COLD),
+    LEVEL_UP_MOVE(51, MOVE_SUPERPOWER),
     LEVEL_UP_END
 };
 #endif //P_FAMILY_CUBCHOO
